--- a/styles/style.css
+++ b/styles/style.css
@@ -248,6 +248,10 @@ hr {
     .second-section,.right-side {
         grid-template-columns: repeat(1,1fr);
     }
+    .footer {
+        width: 460px;
+        height: 520px;
+    }
     .footer-link a {
         display: block;
     }
