--- a/styles/style.css
+++ b/styles/style.css
@@ -64,6 +64,11 @@ body {
 .banner-image img {
     width: 581px;
     height: 644px;
+    transition: width 5s ease;  
+}
+.banner-image img:hover {
+    width: 481px;
+    
 }
 
 /* 2nd section  */
